test de l'appel de la fonction

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>test</h1>
   <!-- test de commentaire -->
+  <script src="./index.js"></script>
 </body>
-<script src="/index.js"></script>
 </html>
